--- a/plants.html
+++ b/plants.html
@@ -28,14 +28,15 @@
         <div class="col-md">Valerian</div>
         <div class="col-md">Easter Lilly</div>
         <div class="col-md">Lamium</div>
-        <div class="col-md">Daphna,Darmera</div>
-        <div class="col-md">Arum Lily,Allium</div>
+        <div class="col-md">Daphna</div>
+        <div class="col-md">Arum Lily</div>
         <div class="col-md">Neillia</div>
     </div>
     </div>
     <P>
       When i try to reduce the size of browser, The row which breaks first is the plants name.
-      The reason is due to the word length.
+      The class used for coulumn is col-sm-2 the screen width is 576px where as for col-md the screen width is 768px.
+      So when we reduce the size of browser the cloumn with plants is breaking first. 
     </P>
 </body>
 </html>
