--- a/plants.html
+++ b/plants.html
@@ -38,5 +38,16 @@
       The class used for coulumn is col-sm-2 the screen width is 576px where as for col-md the screen width is 768px.
       So when we reduce the size of browser the cloumn with plants is breaking first. 
     </P>
+    <div class="container">
+      <img class="img-fluid" src="Images/valerian.jpg" alt="Valerian image" width="290" height="290">
+      <img class="img-fluid" src="Images/Easter lilly.jpg" alt="Easter Lilly" width="350" height="350" >
+      <img class="img-fluid" src="Images/daphne.jpg" alt="Daphne">
+    </div>
+    <br>
+    <div class="container">
+      <img  class = "img-thumbnail" src="Images/valerian.jpg" alt="Valerian Image" width="290" height="290">
+      <img class="img-thumbnail" src="Images/Easter lilly.jpg" alt="Easter Lilly" width="350" height="350">
+      <img class="img-thumbnail" src="Images/daphne.jpg" alt="Daphne">
+    </div>
 </body>
 </html>
