Added Table with details

--- a/plants.html
+++ b/plants.html
@@ -49,5 +49,53 @@
       <img class="img-thumbnail" src="Images/Easter lilly.jpg" alt="Easter Lilly" width="350" height="350">
       <img class="img-thumbnail" src="Images/daphne.jpg" alt="Daphne">
     </div>
+    <table class="table  table-hover table-bordered table-condensed table-sm">
+      <thead>
+        <tr class="text-danger">
+          <th scope="col">Letter</th>
+          <th scope="col">Plant</th>
+          <th scope="col">Mountain</th>
+          <th scope="col">Lake</th>
+        </tr>
+      </thead>
+      <tbody class="text-primary">
+        <tr>
+          <th scope="row">V</th>
+          <td>Valerian</td>
+          <td>Vesper Peak.</td>
+          <td>Valencia</td>
+        </tr>
+        <tr class="text-info">
+          <th scope="row">E</th>
+          <td>Easter Lilly</td>
+          <td>Eagle Peak</td>
+          <td>Eemmeer</td>
+        </tr>
+        <tr class="text-primary">
+          <th scope="row">L</th>
+          <td>Lamium</td>
+          <td>Liankang Kangri.</td>
+          <td>La Grande 2	</td>
+        </tr>
+        <tr class="text-info">
+          <th scope="row">D</th>
+          <td>Daphna</td>
+          <td>Dickerson</td>
+          <td>Dal</td>
+        </tr>
+        <tr class="text-primary">
+          <th scope="row">A</th>
+          <td>Arum Lily</td>
+          <td>Andrus</td>
+          <td>Abashiri</td>
+        </tr>
+        <tr class="text-info">
+          <th scope="row">N</th>
+          <td>Neillia</td>
+          <td>Nanda devi.</td>
+          <td>Navarro Mills</td>
+        </tr>
+      </tbody>
+    </table>
 </body>
 </html>
