--- a/plants.html
+++ b/plants.html
@@ -97,5 +97,15 @@
         </tr>
       </tbody>
     </table>
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button Letters">
+    <div class="btn-group me-2" role="group" aria-label="Buttons with Letters">
+      <button type="button" class="btn btn-success">V</button>
+      <button type="button" class="btn btn-success">E</button>
+      <button type="button" class="btn btn-success">L</button>
+      <button type="button" class="btn alert alert-warning">D</button>
+      <button type="button" class="btn alert alert-warning">A</button>
+      <button type="button" class="btn btn-danger">N</button>
+    </div>
+  </div>
 </body>
 </html>
