--- a/plants.html
+++ b/plants.html
@@ -107,5 +107,15 @@
       <button type="button" class="btn btn-danger">N</button>
     </div>
   </div>
+  <br>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        V
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="basic.html">Basic HTML Page</a></li>
+        <li><a class="dropdown-item" href="advanced.html">Advanced HTML Page</a></li>
+      </ul>
+    </div>
 </body>
 </html>
