--- a/plants.html
+++ b/plants.html
@@ -13,6 +13,30 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </head>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="plants.html">Intresting Plants</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="basic.html">Basic</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="advanced.html">Advanced</a>
+          </li>
+          <li class="nav-item dropdown">
+            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+              <li><a class="dropdown-item" href="basic.html">Basic</a></li>
+              <li><a class="dropdown-item" href="advanced.html">Advanced</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <body>
     <div class="container">
     <h1> "Plants by" Sailaxmi Veldanda</h1>
@@ -49,7 +73,9 @@
       <img class="img-thumbnail" src="Images/Easter lilly.jpg" alt="Easter Lilly" width="350" height="350">
       <img class="img-thumbnail" src="Images/daphne.jpg" alt="Daphne">
     </div>
-    <table class="table  table-hover table-bordered table-condensed table-sm">
+    <h3> Table:</h3>
+    <table class="table  table-hover table-bordered table-condensed table-sm caption-top">
+      <caption>List of Elements:</caption>
       <thead>
         <tr class="text-danger">
           <th scope="col">Letter</th>
@@ -97,6 +123,7 @@
         </tr>
       </tbody>
     </table>
+  <h3>Buttons:</h3>
   <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button Letters">
     <div class="btn-group me-2" role="group" aria-label="Buttons with Letters">
       <button type="button" class="btn btn-success">V</button>
@@ -108,14 +135,34 @@
     </div>
   </div>
   <br>
-    <div class="btn-group" role="group">
+  <h3> Dropdown:</h3>
+  <div class="btn-group" role="group">
       <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        V
+        Initial Letter
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="basic.html">Basic HTML Page</a></li>
         <li><a class="dropdown-item" href="advanced.html">Advanced HTML Page</a></li>
       </ul>
     </div>
+    <br>
+    <br>
+    <h3>Forms:</h3>
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Plant</label>
+        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter your Plant">
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </body>
 </html>
