--- a/plants.html
+++ b/plants.html
@@ -144,11 +144,11 @@
         <li><a class="dropdown-item" href="basic.html">Basic HTML Page</a></li>
         <li><a class="dropdown-item" href="advanced.html">Advanced HTML Page</a></li>
       </ul>
-    </div>
-    <br>
-    <br>
-    <h3>Forms:</h3>
-    <form>
+  </div>
+  <br>
+  <br>
+  <h3>Forms:</h3>
+  <form>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -163,6 +163,40 @@
         <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+  </form>
+  <br>
+  <h3> Bonus: </h3>
+  <div class="row">
+    <div class="col-sm-3">
+    <div class="card" style="width: 18rem;">
+      <img src="Images/valerian.jpg" class="card-img-top" alt="Valerian">
+      <div class="card-body">
+        <h5 class="card-title">Valerian</h5>
+        <p class="card-text">Valerian is a perennial flowering plant native to Europe and Asia.</p>
+        <a href="Images/valerian.jpg" class="btn btn-primary">Valerian Image</a>
+      </div>
+    </div>
+    </div>
+    <div class="col-sm-3">
+    <div class="card" style="width: 18rem;">
+      <img src="Images/Easter lilly.jpg" class="card-img-top" alt="Easter Lilly">
+        <div class="card-body">
+          <h5 class="card-title">Easter Lilly</h5>
+          <p class="card-text">Lilium longiflorum, often called the Easter lily, is a plant endemic to both Taiwan and Ryukyu Islands.</p>
+          <a href="Images/Easter lilly.jpg" class="btn btn-primary">Easter Lilly Image</a>
+        </div>
+      </div>
+      </div>
+      <div class="col-sm-3">
+      <div class="card" style="width: 18rem;">
+        <img src="Images/daphne.jpg" class="card-img-top" alt="Daphne">
+          <div class="card-body">
+            <h5 class="card-title">Daphne</h5>
+            <p class="card-text">Daphne is a genus of between 70 and 95 species of deciduous and evergreen shrubs in the family Thymelaeaceae, native to Asia, Europe and north Africa. </p>
+            <a href="Images/daphne.jpg" class="btn btn-primary">Daphne Image</a>
+          </div>
+      </div>
+      </div>
+      </div>
 </body>
 </html>
